--- a/PYTHON_learning.ipynb
+++ b/PYTHON_learning.ipynb
@@ -6,7 +6,7 @@
       "private_outputs": true,
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOaCwrN08q7fhYTJgTjYF66",
+      "authorship_tag": "ABX9TyPgAtaB7Dv2ojcE+QxD9x4x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,6 +30,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**let's start**"
+      ],
+      "metadata": {
+        "id": "IbRVBnfLA-CV"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -39,6 +48,28 @@
       "source": [
         "\" hello word \""
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 1"
+      ],
+      "metadata": {
+        "id": "kzjWS8UXBNGq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x"
+      ],
+      "metadata": {
+        "id": "XD5Nmx3pBt8B"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
